Alignment is not correct on "Assign Signer order" option on "Who needs to sign this document?" pop up under "Basic+" documents

--- a/assets/css/rtl-admin.css
+++ b/assets/css/rtl-admin.css
@@ -1045,3 +1045,6 @@ span.deleteIcon{
 #submit_send_layer {
     left: 25px;
 }
+#esig-view-signer-add .text-left{
+  text-align: right!important;
+}
